--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "laravelflare/flare": "0.2.x-dev",
+        "laravelflare/flare": "dev-master",
         "intervention/image": "2.3.*"
     },
     "require-dev": {
